package javaLang.Decorator.demo1;

/**
 * 抽象组件
 */
public abstract class Component {
    /**
     * 抽象的方法，可以随意扩充更多抽象方法
     */
    public abstract void operate();
}
