package javaLang.Decorator.demo1;


/**
 * 具体组件实现类
 */
public class ConcreteComponent extends Component {

    @Override
    public void operate() {

        System.out.println("do something....");
    }
}
